--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,8 @@
   "author": "Azition",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "axios": "^0.21.0",
+    "express": "^4.17.1",
+    "lodash": "^4.17.20"
   }
 }
